feat: Implement Aurora feature management system with commands
- Added AuroraCommands class to handle command registration and execution for features.
- Created AbstractFeature class as a base for all features, implementing common functionality.
- Developed specific features: FastBreak, FastPlace, ForcePlace, FreezeUpdates, NoClip, Replace, and Tinker.
- Implemented FeatureManager to manage feature states and interactions.
- Integrated keybindings for menu toggling and feature activation.
- Added GUI rendering for active features and menu display.
- Created mixins to modify Minecraft behavior for features like FastBreak, FastPlace, and NoClip.
- Enhanced user feedback through chat messages for feature status changes.

--- a/src/main/resources/assets/aurora/lang/en_us.json
+++ b/src/main/resources/assets/aurora/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "key.aurora.menu": "Aurora Menu",
-  "category.aurora.general": "Aurora"
+  "key.aurora.replace": "Replace Block",
+  "key.aurora.tinker": "Tinker Block",
+  "category.aurora": "Aurora"
 }
